acertando Datatables / rotas que estavam dando ruim
